# postgresql-agent

./: .clinerules  .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml  requirements.txt  run.py  streamlit_app.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/features/: agent-selection.md  authentication.md
src/postgresql_agent/: __init__.py  agents.py  config.py  connector.py  tasks.py  tools.py
tests/test_postgresql_agent/: __init__.py  test_connector.py
